# NEW

./: .gitattributes  .gitignore  AUDIT_BUNDLE.txt  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
bridge/: blender_bridge.py
data/: tool_requests.jsonl
docs/: CLAUDE_DESKTOP_SETUP.md  PRODUCT.md  tool_requests.md
projects/EPHAESTUS/: FIXES_APPLIED.md  HEPHAESTUS_STARTUP_GUIDE.md  LICENSE  README.md  URBAN_TOOLS_README.md  VISION_ULTIMATE_BLENDER_MCP.md  addon.py  check_random.py  check_syntax.py  fix_addon.py  fix_random.py  main.py  patch_addon.py  pyproject.toml  smithery.example.json  test_mcp.py  update_installation.bat  urban_tools_addon_patch.py
projects/EPHAESTUS/.claude/: mcp.json  settings.local.json
projects/EPHAESTUS/docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  INSTALLATION.md  SMITHERY.md  TOOLS_LIST.md
projects/EPHAESTUS/reports/: qa_analyze_report.json  qa_character_blockout_report.json  qa_core_report.json  qa_mech_advanced2_report.json  qa_mech_advanced_report.json  qa_mech_assembly_report.json  qa_mech_complex_report.json  qa_mech_macro_report.json  qa_mech_report.json  qa_nature_report.json  qa_props_report.json  qa_props_scatter_report.json  qa_super_report.json  qa_tools_matrix_report.json  qa_urban_block_report.json  qa_urban_report.json
projects/EPHAESTUS/src/hephaestus/: __init__.py  connection.py  server.py
projects/EPHAESTUS/src/hephaestus/presets/lighting/: dramatic.json  soft.json  studio.json  sunset.json  three_point.json
projects/EPHAESTUS/src/hephaestus/presets/materials/: concrete.json  emission.json  glass.json  metal_chrome.json  metal_dark.json  plastic.json  wood.json
projects/EPHAESTUS/src/hephaestus/tools/: __init__.py  advanced.py  camera.py  geonodes.py  io_tools.py  lighting.py  materials.py  mesh_edit.py  modifiers.py  objects.py  scene.py  urban.py
projects/EPHAESTUS/src/hephaestus/utils/: __init__.py  helpers.py
projects/EPHAESTUS/tests/: __init__.py
projects/EPHAESTUS/v2/: CAHIER_DES_CHARGES.md  README.md  config.json  pyproject.toml
projects/EPHAESTUS/v2/addon/: README.md
projects/EPHAESTUS/v2/docs/: ARCHITECTURE.md  CLIENTS.md  COMPLIANCE.md  claude_desktop_config.example.json
projects/EPHAESTUS/v2/shared/: README.md
projects/EPHAESTUS/v2/src/hephaestus_mcp/: __init__.py  server.py
projects/EPHAESTUS/v2/src/hephaestus_mcp/shared/: config.py  errors.py  logging.py
projects/EPHAESTUS/v2/src/hephaestus_mcp/tools/: defs.py  registry.py
projects/EPHAESTUS/v2/tests/: test_bridge_server.py  test_contract.py  test_tools.py  test_validation.py
runs/: actions.jsonl
schemas/: determinism_rules_v1.md  execution_model_v1.md  scene_state_v1.md
scripts/: mcp_stdio_server.py
(+51 files in other folders)
