[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hephaestus-mcp"
version = "2.0.0-alpha.1"
description = "Hephaestus MCP v2 - Blender MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hephaestus Team" }
]
keywords = ["mcp", "blender", "ai", "llm", "3d", "modeling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "mcp>=1.19.0",
  "jsonschema>=4.23.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.3.0"
]

[project.scripts]
hephaestus-mcp = "hephaestus_mcp.server:main"

[tool.hatch.build]
packages = ["src/hephaestus_mcp"]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
